// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Paper components rendering variants should match to snapshot - default Paper: Paper default snapshot 1`] = `
<ForwardRef>
  <WithStyles(ForwardRef(Paper))>
    <ForwardRef(Paper)
      classes={
        Object {
          "elevation0": "MuiPaper-elevation0",
          "elevation1": "MuiPaper-elevation1",
          "elevation10": "MuiPaper-elevation10",
          "elevation11": "MuiPaper-elevation11",
          "elevation12": "MuiPaper-elevation12",
          "elevation13": "MuiPaper-elevation13",
          "elevation14": "MuiPaper-elevation14",
          "elevation15": "MuiPaper-elevation15",
          "elevation16": "MuiPaper-elevation16",
          "elevation17": "MuiPaper-elevation17",
          "elevation18": "MuiPaper-elevation18",
          "elevation19": "MuiPaper-elevation19",
          "elevation2": "MuiPaper-elevation2",
          "elevation20": "MuiPaper-elevation20",
          "elevation21": "MuiPaper-elevation21",
          "elevation22": "MuiPaper-elevation22",
          "elevation23": "MuiPaper-elevation23",
          "elevation24": "MuiPaper-elevation24",
          "elevation3": "MuiPaper-elevation3",
          "elevation4": "MuiPaper-elevation4",
          "elevation5": "MuiPaper-elevation5",
          "elevation6": "MuiPaper-elevation6",
          "elevation7": "MuiPaper-elevation7",
          "elevation8": "MuiPaper-elevation8",
          "elevation9": "MuiPaper-elevation9",
          "outlined": "MuiPaper-outlined",
          "root": "MuiPaper-root",
          "rounded": "MuiPaper-rounded",
        }
      }
    >
      <div
        className="MuiPaper-root MuiPaper-elevation1 MuiPaper-rounded"
      />
    </ForwardRef(Paper)>
  </WithStyles(ForwardRef(Paper))>
</ForwardRef>
`;

exports[`Paper components rendering variants should match to snapshot - with elevation: Paper with elevation snapshot 1`] = `
<ForwardRef
  elevation={3}
>
  <WithStyles(ForwardRef(Paper))
    elevation={3}
  >
    <ForwardRef(Paper)
      classes={
        Object {
          "elevation0": "MuiPaper-elevation0",
          "elevation1": "MuiPaper-elevation1",
          "elevation10": "MuiPaper-elevation10",
          "elevation11": "MuiPaper-elevation11",
          "elevation12": "MuiPaper-elevation12",
          "elevation13": "MuiPaper-elevation13",
          "elevation14": "MuiPaper-elevation14",
          "elevation15": "MuiPaper-elevation15",
          "elevation16": "MuiPaper-elevation16",
          "elevation17": "MuiPaper-elevation17",
          "elevation18": "MuiPaper-elevation18",
          "elevation19": "MuiPaper-elevation19",
          "elevation2": "MuiPaper-elevation2",
          "elevation20": "MuiPaper-elevation20",
          "elevation21": "MuiPaper-elevation21",
          "elevation22": "MuiPaper-elevation22",
          "elevation23": "MuiPaper-elevation23",
          "elevation24": "MuiPaper-elevation24",
          "elevation3": "MuiPaper-elevation3",
          "elevation4": "MuiPaper-elevation4",
          "elevation5": "MuiPaper-elevation5",
          "elevation6": "MuiPaper-elevation6",
          "elevation7": "MuiPaper-elevation7",
          "elevation8": "MuiPaper-elevation8",
          "elevation9": "MuiPaper-elevation9",
          "outlined": "MuiPaper-outlined",
          "root": "MuiPaper-root",
          "rounded": "MuiPaper-rounded",
        }
      }
      elevation={3}
    >
      <div
        className="MuiPaper-root MuiPaper-elevation3 MuiPaper-rounded"
      />
    </ForwardRef(Paper)>
  </WithStyles(ForwardRef(Paper))>
</ForwardRef>
`;

exports[`Paper components rendering variants should match to snapshot - with variant outlined square: Paper with variant outlined square snapshot 1`] = `
<ForwardRef
  square={true}
  variant="outlined"
>
  <WithStyles(ForwardRef(Paper))
    square={true}
    variant="outlined"
  >
    <ForwardRef(Paper)
      classes={
        Object {
          "elevation0": "MuiPaper-elevation0",
          "elevation1": "MuiPaper-elevation1",
          "elevation10": "MuiPaper-elevation10",
          "elevation11": "MuiPaper-elevation11",
          "elevation12": "MuiPaper-elevation12",
          "elevation13": "MuiPaper-elevation13",
          "elevation14": "MuiPaper-elevation14",
          "elevation15": "MuiPaper-elevation15",
          "elevation16": "MuiPaper-elevation16",
          "elevation17": "MuiPaper-elevation17",
          "elevation18": "MuiPaper-elevation18",
          "elevation19": "MuiPaper-elevation19",
          "elevation2": "MuiPaper-elevation2",
          "elevation20": "MuiPaper-elevation20",
          "elevation21": "MuiPaper-elevation21",
          "elevation22": "MuiPaper-elevation22",
          "elevation23": "MuiPaper-elevation23",
          "elevation24": "MuiPaper-elevation24",
          "elevation3": "MuiPaper-elevation3",
          "elevation4": "MuiPaper-elevation4",
          "elevation5": "MuiPaper-elevation5",
          "elevation6": "MuiPaper-elevation6",
          "elevation7": "MuiPaper-elevation7",
          "elevation8": "MuiPaper-elevation8",
          "elevation9": "MuiPaper-elevation9",
          "outlined": "MuiPaper-outlined",
          "root": "MuiPaper-root",
          "rounded": "MuiPaper-rounded",
        }
      }
      square={true}
      variant="outlined"
    >
      <div
        className="MuiPaper-root MuiPaper-outlined"
      />
    </ForwardRef(Paper)>
  </WithStyles(ForwardRef(Paper))>
</ForwardRef>
`;

exports[`Paper components rendering variants should match to snapshot - with variant outlined: Paper with variant outlined snapshot 1`] = `
<ForwardRef
  variant="outlined"
>
  <WithStyles(ForwardRef(Paper))
    variant="outlined"
  >
    <ForwardRef(Paper)
      classes={
        Object {
          "elevation0": "MuiPaper-elevation0",
          "elevation1": "MuiPaper-elevation1",
          "elevation10": "MuiPaper-elevation10",
          "elevation11": "MuiPaper-elevation11",
          "elevation12": "MuiPaper-elevation12",
          "elevation13": "MuiPaper-elevation13",
          "elevation14": "MuiPaper-elevation14",
          "elevation15": "MuiPaper-elevation15",
          "elevation16": "MuiPaper-elevation16",
          "elevation17": "MuiPaper-elevation17",
          "elevation18": "MuiPaper-elevation18",
          "elevation19": "MuiPaper-elevation19",
          "elevation2": "MuiPaper-elevation2",
          "elevation20": "MuiPaper-elevation20",
          "elevation21": "MuiPaper-elevation21",
          "elevation22": "MuiPaper-elevation22",
          "elevation23": "MuiPaper-elevation23",
          "elevation24": "MuiPaper-elevation24",
          "elevation3": "MuiPaper-elevation3",
          "elevation4": "MuiPaper-elevation4",
          "elevation5": "MuiPaper-elevation5",
          "elevation6": "MuiPaper-elevation6",
          "elevation7": "MuiPaper-elevation7",
          "elevation8": "MuiPaper-elevation8",
          "elevation9": "MuiPaper-elevation9",
          "outlined": "MuiPaper-outlined",
          "root": "MuiPaper-root",
          "rounded": "MuiPaper-rounded",
        }
      }
      variant="outlined"
    >
      <div
        className="MuiPaper-root MuiPaper-outlined MuiPaper-rounded"
      />
    </ForwardRef(Paper)>
  </WithStyles(ForwardRef(Paper))>
</ForwardRef>
`;
